# codebook-backend

./: codegen-config.yaml  deployment.template.yaml  gitea_README.md  job.template.yaml  play.py  pyproject.toml
.openapi-generator/: FILES
chat/: consumers.py
codebook/: asgi.py  celery.py  pagination.py  serializers.py  settings.py  urls.py  wsgi.py
gitea/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
gitea/api/: __init__.py  admin_api.py  issue_api.py  miscellaneous_api.py  notification_api.py  organization_api.py  repository_api.py  settings_api.py  user_api.py
gitea/apis/: __init__.py
gitea/docs/: AdminApi.md  BranchProtection.md  Comment.md  Commit.md  ContentsResponse.md  CreateBranchProtectionOption.md  CreateForkOption.md  CreateGPGKeyOption.md  CreateHookOption.md  CreateOAuth2ApplicationOptions.md  CreateRepoOption.md  CreateTeamOption.md  CreateUserOption.md  DismissPullReviewOptions.md  EditBranchProtectionOption.md  EditHookOption.md  EditPullRequestOption.md  EditRepoOption.md  EditTeamOption.md  EditUserOption.md  ExternalTracker.md  GPGKey.md  GeneralRepoSettings.md  GeneralUISettings.md  Hook.md  Issue.md  IssueApi.md  IssueTemplate.md  MergePullRequestOption.md  MigrateRepoForm.md  MigrateRepoOptions.md  MiscellaneousApi.md  (+19 more)
iac/: apps.py  consumers.py  models.py  runner.py  serializers.py  tasks.py  urls.py  views.py
porter/: consumers.py  gitea.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
user/: apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
(+305 files in other folders)
